opentelemetry-kube-stack-opentelemetry-operator-mutation.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    meta.helm.sh/release-name: opentelemetry-kube-stack
    meta.helm.sh/release-namespace: opentelemetry-operator-system
  creationTimestamp: '2026-03-20T15:34:26Z'
  generation: 1
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: opentelemetry-kube-stack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: opentelemetry-operator
    app.kubernetes.io/part-of: opentelemetry-operator
    app.kubernetes.io/version: 0.138.0
    helm.sh/chart: opentelemetry-operator-0.99.0
  name: opentelemetry-kube-stack-opentelemetry-operator-mutation
  resourceVersion: '1774020866301439000'
  uid: 046a9505-912d-4af7-8b13-a2696f6da831
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURSakNDQWk2Z0F3SUJBZ0lSQVBYdXFFL1gzWlR5WHpZQkVQUFdpcm93RFFZSktvWklodmNOQVFFTEJRQXcKTFRFck1Da0dBMVVFQXhNaWIzQmxiblJsYkdWdFpYUnllUzF2Y0dWeVlYUnZjaTF2Y0dWeVlYUnZjaTFqWVRBZQpGdzB5TmpBek1qQXhOVE0wTUROYUZ3MHlOekF6TWpBeE5UTTBNRE5hTUMweEt6QXBCZ05WQkFNVEltOXdaVzUwClpXeGxiV1YwY25rdGIzQmxjbUYwYjNJdGIzQmxjbUYwYjNJdFkyRXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUEKQTRJQkR3QXdnZ0VLQW9JQkFRRHFNYUFEclVjQ3ArbWRLM2FqYkZIeXJIV3hLQVIyMXRTSzZTK1E0dmREb2JoSgoyQ2tkb21MOFpPN0 [...]
    service:
      name: opentelemetry-kube-stack-opentelemetry-operator-webhook
      namespace: opentelemetry-operator-system
      path: /mutate-opentelemetry-io-v1alpha1-instrumentation
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: minstrumentation.kb.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - opentelemetry.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - instrumentations
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURSakNDQWk2Z0F3SUJBZ0lSQVBYdXFFL1gzWlR5WHpZQkVQUFdpcm93RFFZSktvWklodmNOQVFFTEJRQXcKTFRFck1Da0dBMVVFQXhNaWIzQmxiblJsYkdWdFpYUnllUzF2Y0dWeVlYUnZjaTF2Y0dWeVlYUnZjaTFqWVRBZQpGdzB5TmpBek1qQXhOVE0wTUROYUZ3MHlOekF6TWpBeE5UTTBNRE5hTUMweEt6QXBCZ05WQkFNVEltOXdaVzUwClpXeGxiV1YwY25rdGIzQmxjbUYwYjNJdGIzQmxjbUYwYjNJdFkyRXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUEKQTRJQkR3QXdnZ0VLQW9JQkFRRHFNYUFEclVjQ3ArbWRLM2FqYkZIeXJIV3hLQVIyMXRTSzZTK1E0dmREb2JoSgoyQ2tkb21MOFpPN0 [...]
    service:
      name: opentelemetry-kube-stack-opentelemetry-operator-webhook
      namespace: opentelemetry-operator-system
      path: /mutate-opentelemetry-io-v1beta1-opentelemetrycollector
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: mopentelemetrycollectorbeta.kb.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - opentelemetry.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - opentelemetrycollectors
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURSakNDQWk2Z0F3SUJBZ0lSQVBYdXFFL1gzWlR5WHpZQkVQUFdpcm93RFFZSktvWklodmNOQVFFTEJRQXcKTFRFck1Da0dBMVVFQXhNaWIzQmxiblJsYkdWdFpYUnllUzF2Y0dWeVlYUnZjaTF2Y0dWeVlYUnZjaTFqWVRBZQpGdzB5TmpBek1qQXhOVE0wTUROYUZ3MHlOekF6TWpBeE5UTTBNRE5hTUMweEt6QXBCZ05WQkFNVEltOXdaVzUwClpXeGxiV1YwY25rdGIzQmxjbUYwYjNJdGIzQmxjbUYwYjNJdFkyRXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUEKQTRJQkR3QXdnZ0VLQW9JQkFRRHFNYUFEclVjQ3ArbWRLM2FqYkZIeXJIV3hLQVIyMXRTSzZTK1E0dmREb2JoSgoyQ2tkb21MOFpPN0 [...]
    service:
      name: opentelemetry-kube-stack-opentelemetry-operator-webhook
      namespace: opentelemetry-operator-system
      path: /mutate-v1-pod
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: mpod.kb.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ''
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
